packages/pySDC/pysdc-5.5.2.tar.gz/pysdc-5.5.2/pySDC/playgrounds/FEniCS/jitfailure-dolfin_expression_fc28530d435fa2de045af3312fc07c3b/error.log
/var/folders/2k/pxkwm7vs5gbgytmvq_mzdr0c0000gn/T/tmpx8abebg0/dolfin_expression_fc28530d435fa2de045af3312fc07c3b.cpp:63:46: error: use of undeclared identifier 'c'
          values[0] = cos(a*x[0]) * cos(t) + c;
                                             ^
1 error generated.
